Add HTML commets

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html> <!-- This defines the version of HTML, which is v5 -->
+<html lang="en"> <!-- This att/value pair defines the language of the content -->
 <head>
-   <meta charset="UTF-8">
+   <meta charset="UTF-8"> <!-- This defines the character set of the content -->
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <title>Document</title>
+   <title>Document</title> <!-- This is rendered in the tab, bookmarks, and the Dock. It’s also used by search enginers. -->
 </head>
 <body>
    
