Change outlining example from music to parks

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
    <title>Document</title> <!-- This is rendered in the tab, bookmarks, and the Dock. It’s also used by search enginers. -->
 </head>
 <body>
-   <h1>Music</h1>
-   <h2>Nirvana</h2>
-   <h3>Smells Like Teen Spirit</h3>
-   <h2>Run DMC</h2>
-   <h3>Sucker MCs</h3>
-   <h2>Beethoven</h2>
-   <h3>Für Elise</h3>
-   <h2>Shostakovich</h2>
-   <h3>Symphony No 10</h3>
+   <h1>Parks</h1>
+   <h2>Manhattan</h2>
+   <h3>Central Park</h3>
+   <h2>Queens</h2>
+   <h3>Flushing Meadows-Corona Park</h3>
+   <h2>Brooklyn</h2>
+   <h3>Prospect Park</h3>
+   <h2>The Bronx</h2>
+   <h3>Van Cortlandt Park</h3>
 </body>
 </html>
